--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,11 +1,15 @@
+2004-01-21  Zack Weinberg  <zack@codesourcery.com>
+
+	* gcc.dg/noncompile/20020213-1.c: Add another dg-warning line.
+
 2004-01-20  Hartmut Penner  <hpenner@de.ibm.com>
 
 	* gcc.dg/ppc64-abi-2.c: New test.
 
 2004-01-18  James A. Morrison  <ja2morri@uwaterloo.ca>
 
-        * lib/treelang.exp: Fill out this file.
-        * lib/treelang-dg.exp: New File.
+	* lib/treelang.exp: Fill out this file.
+	* lib/treelang-dg.exp: New File.
 
 2004-01-20  Joseph S. Myers  <jsm@polyomino.org.uk>
 
