* config/m32r/m32r.h (CPP_SPEC): Define.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76275 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-21  Inaoka Kazuhiro  <inaoka.kazuhiro@renesas.com>
+
+	* config/m32r/m32r.h (CPP_SPEC): Define.
+
 2004-01-21  Zack Weinberg  <zack@codesourcery.com>
 
 	* c-decl.c (merge_decls): Kill different_binding_level and
