--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-21  Falk Hueffner  <falk@debian.org>
+
+	PR target/12898
+	* config/alpha/alpha.c (alpha_emit_set_const_1): If
+	no_new_pseudos, use gen_rtx_SET directly for SImode constants
+	which need multiple instructions to emit.
+
 2004-01-21  Inaoka Kazuhiro  <inaoka.kazuhiro@renesas.com>
 
 	* config/m32r/m32r.h (CPP_SPEC): Define.
