--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-21  Falk Hueffner  <falk@debian.org>
+
+	* gcc.c-torture/compile/20040121-1.c: New test.
+
 2004-01-21  Zack Weinberg  <zack@codesourcery.com>
 
 	* gcc.dg/noncompile/20020213-1.c: Add another dg-warning line.
