* crtstuff.c (frame_dummy, __do_global_ctors_1): Call 	_Jv_RegisterClasses through a function pointer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76287 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-21  Jakub Jelinek  <jakub@redhat.com>
+
+	* crtstuff.c (frame_dummy, __do_global_ctors_1): Call
+	_Jv_RegisterClasses through a function pointer.
+
 2004-01-21  Falk Hueffner  <falk@debian.org>
 
 	PR target/12898
