--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-21  Andreas Jaeger  <aj@suse.de>
+	    Michael Matz  <matz@suse.de>
+
+	* doc/extend.texi (Extended Asm): Clarify memory clobber.
+
 2004-01-21  Jakub Jelinek  <jakub@redhat.com>
 
 	* crtstuff.c (frame_dummy, __do_global_ctors_1): Call
