--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-21  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* crontab: Make 3.4 snapshots from the new 3.4 release branch.
+
 2004-01-20  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* gcc_release (build_sources): Delete call to make f77.rebuilt.
