--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-21  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/coff.h: Update copyright.
+	* config/h8300/elf.h: Likewise.
+	* config/h8300/h8300-protos.h: Likewise.
+	* config/h8300/h8300.c: Likewise.
+	* config/h8300/h8300.h: Likewise.
+	* config/h8300/h8300.md: Likewise.
+
 2004-01-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* fixinc/inclhack.def (hpux10_stdio_declarations, ultrix_const3,
