--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,24 @@
 2004-01-21  Kazu Hirata  <kazu@cs.umass.edu>
 
+	* alias.c, basic-block.h, c-common.c, c-common.h,
+	c-cppbuiltin.c, c-opts.c, c-pragma.c, c-pretty-print.c,
+	calls.c, cfg.c, cfgcleanup.c, cfgrtl.c, cgraph.h, collect2.c,
+	combine.c, cppcharset.c, cpphash.h, cppinit.c, cpplib.c,
+	cpplib.h, cppmacro.c, crtstuff.c, cselib.c, cselib.h,
+	defaults.h, df.c, dominance.c, et-forest.c, expmed.c, expr.c,
+	expr.h, fix-header.c, function.h, gcc.c, gcse.c, genattrtab.c,
+	genautomata.c, genconditions.c, genemit.c, genflags.c,
+	gengtype.c, gengtype.h, genopinit.c, genrecog.c, gensupport.c,
+	ggc-zone.c, graph.c, haifa-sched.c, input.h, integrate.c,
+	langhooks-def.h, langhooks.c, langhooks.h, line-map.c,
+	line-map.h, local-alloc.c, optabs.c, optabs.h, postreload.c,
+	ra.h, recog.c, reg-stack.c, regmove.c, reload.c, reorg.c,
+	rtl.c, sched-deps.c, sched-ebb.c, sdbout.c, system.h,
+	target.h, targhooks.c, toplev.h, tree-inline.c, unwind-pe.h,
+	unwind.h, varray.c, varray.h: Update copyright.
+
+2004-01-21  Kazu Hirata  <kazu@cs.umass.edu>
+
 	* config/h8300/coff.h: Update copyright.
 	* config/h8300/elf.h: Likewise.
 	* config/h8300/h8300-protos.h: Likewise.
