* Make-lang.in, call.c, class.c, decl2.c, except.c, expr.c, 	init.c, mangle.c, typeck.c: Update copyright.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76304 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-21  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* Make-lang.in, call.c, class.c, decl2.c, except.c, expr.c,
+	init.c, mangle.c, typeck.c: Update copyright.
+
 2004-01-21  Zdenek Dvorak  <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* parser.c (cp_parser_class_specifier): Prevent garbage collection.
