--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-21  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	* pa-protos.h: Update copyright.
+	* pa.h: Likewise.
+	* pa.md: Likewise.
+
 2004-01-21  Caroline Tice <ctice@apple.com>
 
 	PR target/12308
