--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-21  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* java/awt/Component.java (show): Set visible to true before
+	showing the peer.
+
 2004-01-21  Kim Ho  <kho@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GtkFramePeer.java (postConfigureEvent):
