--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-21  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/i386/i386.md: Simplify certain comparisons of
+	const_int.
+
 2004-01-21  Andrew Pinski  <apinski@apple.com>
 
 	PR target/13785
