--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-22  Olivier Hainque  <hainque@act-europe.fr>
+
+	* config/sparc/sparc.c (function_arg_record_value_1): Fix
+	computation of the number of integer registers required.
+
 2004-01-21  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/i386/i386.md: Simplify certain comparisons of
