--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-22  Jan Hubicka  <jh@suse.cz>
+
+	* function.c (allocate_struct_function): Do not initialize expr, emit
+	and varasm.
+	(prepare_function_start): Do it here.
+	* c-parse.in (maybe_type_qual): Do not produce line number notes.
+
 2004-01-22  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR target/13559
