* i386.md (lea and add splitters): Make sure that all the operands 	get elliminated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76348 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/hammer-3_3-branch/gcc/config/i386/i386.md
+++ b/hammer-3_3-branch/gcc/config/i386/i386.md
@@ -5389,6 +5389,12 @@
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[2] = gen_lowpart (Pmode, operands[2]);
   operands[3] = gen_lowpart (Pmode, operands[3]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[2]) == SUBREG)
+    alter_subreg (&operands[2]);
+  if (GET_CODE (operands[3]) == SUBREG)
+    alter_subreg (&operands[3]);
   pat = gen_rtx_PLUS (Pmode, gen_rtx_PLUS (Pmode, operands[1], operands[2]),
   		      operands[3]);
   if (Pmode != SImode)
@@ -5416,6 +5422,12 @@
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[2] = gen_lowpart (Pmode, operands[2]);
   operands[3] = gen_lowpart (Pmode, operands[3]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[2]) == SUBREG)
+    alter_subreg (&operands[2]);
+  if (GET_CODE (operands[3]) == SUBREG)
+    alter_subreg (&operands[3]);
 }
   [(set_attr "type" "lea")
    (set_attr "mode" "SI")])
@@ -5439,6 +5451,10 @@
   operands[0] = gen_lowpart (SImode, operands[0]);
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[3] = gen_lowpart (Pmode, operands[3]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[3]) == SUBREG)
+    alter_subreg (&operands[3]);
   pat = gen_rtx_PLUS (Pmode, gen_rtx_MULT (Pmode, operands[1], operands[2]),
   		      operands[3]);
   if (Pmode != SImode)
@@ -5465,6 +5481,10 @@
 {
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[3] = gen_lowpart (Pmode, operands[3]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[3]) == SUBREG)
+    alter_subreg (&operands[3]);
 }
   [(set_attr "type" "lea")
    (set_attr "mode" "SI")])
@@ -5489,6 +5509,12 @@
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[3] = gen_lowpart (Pmode, operands[3]);
   operands[4] = gen_lowpart (Pmode, operands[4]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[3]) == SUBREG)
+    alter_subreg (&operands[3]);
+  if (GET_CODE (operands[4]) == SUBREG)
+    alter_subreg (&operands[4]);
   pat = gen_rtx_PLUS (Pmode,
   		      gen_rtx_PLUS (Pmode, gen_rtx_MULT (Pmode, operands[1],
 		      					 operands[2]),
@@ -5521,6 +5547,12 @@
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[3] = gen_lowpart (Pmode, operands[3]);
   operands[4] = gen_lowpart (Pmode, operands[4]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[3]) == SUBREG)
+    alter_subreg (&operands[3]);
+  if (GET_CODE (operands[4]) == SUBREG)
+    alter_subreg (&operands[4]);
 }
   [(set_attr "type" "lea")
    (set_attr "mode" "SI")])
@@ -5863,6 +5895,10 @@
     {
       operands[1] = gen_lowpart (Pmode, operands[1]);
       operands[2] = gen_lowpart (Pmode, operands[2]);
+      if (GET_CODE (operands[1]) == SUBREG)
+	alter_subreg (&operands[1]);
+      if (GET_CODE (operands[2]) == SUBREG)
+	alter_subreg (&operands[2]);
     }
   operands[0] = gen_lowpart (SImode, operands[0]);
   pat = gen_rtx_PLUS (Pmode, operands[1], operands[2]);
@@ -5940,6 +5976,10 @@
 {
   operands[1] = gen_lowpart (Pmode, operands[1]);
   operands[2] = gen_lowpart (Pmode, operands[2]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
+  if (GET_CODE (operands[2]) == SUBREG)
+    alter_subreg (&operands[2]);
 })
 
 (define_insn "*addsi_2"
@@ -11292,6 +11332,8 @@
   rtx pat;
   operands[0] = gen_lowpart (SImode, operands[0]);
   operands[1] = gen_lowpart (Pmode, operands[1]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
   operands[2] = gen_int_mode (1 << INTVAL (operands[2]), Pmode);
   pat = gen_rtx_MULT (Pmode, operands[1], operands[2]);
   if (Pmode != SImode)
@@ -11372,6 +11414,8 @@
 					    (match_dup 2)) 0)))]
 {
   operands[1] = gen_lowpart (Pmode, operands[1]);
+  if (GET_CODE (operands[1]) == SUBREG)
+    alter_subreg (&operands[1]);
   operands[2] = gen_int_mode (1 << INTVAL (operands[2]), Pmode);
 })
 
