--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/tm.texi (CASE_VECTOR_PC_RELATIVE): Mention that the
+	macro need not be defined if jump-tables should contain
+	relative addresses only when -fPIC or -fPIC is in effect.
+
 2004-01-22  Jan Hubicka  <jh@suse.cz>
 
 	* alias.c (reg_base_value): Turn into varray.
