--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-22  Roger Sayle  <roger@eyesopen.com>
+	    Paolo Bonzini  <bonzini@gnu.org>
+
+	* rtlanal.c (subreg_lsb_1): New function split out from subreg_lsb.
+	(subreg_lsb): Change to call new subreg_lsb_1 helper function.
+	* rtl.h (subreg_lsb_1): Prototype here.
+	* simplify-rtx.c (simplify_subreg): Optimize subregs of zero and
+	sign extensions.
+
 2004-01-22  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* doc/tm.texi (CASE_VECTOR_PC_RELATIVE): Mention that the
