--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-22  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+	(connectJObject): Replace printf calls with g_assert statements.
+	Move property-notify-event signal connection to ...
+	(connectSignals): Connect property-notify-event signal.  Iterate
+	through the vbox's children to find layout.
+
 2004-01-22  Graydon Hoare  <graydon@redhat.com>
 	
 	* gnu/java/awt/peer/gtk/GdkClasspathFontPeer.java: 
