--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/h8300/h8300.h (REG_OK_FOR_INDEX_P_STRICT): Remove.
+	(REG_OK_FOR_BASE_P_STRICT): Likewise.
+	(STRICT): Likewise.
+
 2004-01-22  Daniel Jacobowitz  <drow@mvista.com>
 
 	* c-semantics.c (genrtl_while_stmt, genrtl_do_stmt_1)
