--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-22  Jan Hubicka  <jh@suse.cz>
+
+	* cfgcleanup.c (first_pass): New static variable.
+	(try_forward_edges):  Add work limiting check for threading.
+	(try_crossjump_bb):  Add work limiting check for crossjumping.
+	(try_optimize_cfg):  Maintain first pass variable.
+
 2004-01-22  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/xtensa.c (function_arg): Generalize logic so that it
