--- a/libffi/ChangeLog
+++ b/libffi/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-22  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* testsuite/libffi.call/cls_uint.c (cls_ret_uint_fn): Treat result
+	value as of type ffi_arg, not unsigned int.
+
 2004-01-21  Michael Ritzert  <ritzert@t-online.de>
 
 	* ffi64.c (ffi_prep_args): Cast the RHS of an assignment instead
