* doc/invoke.texi (Optimize Options): Note that --param arguments 	are subject to change without notice.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76391 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-22  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	* doc/invoke.texi (Optimize Options): Note that --param arguments
+	are subject to change without notice.
+
 2004-01-22  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config.gcc (mips-sgi-irix6*o32): Removed.
