Removed testsuite/ChangeLog again; put entry into top-level ChangeLog
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76392 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Jeff Sturm  <jsturm@one-point.com>
+
+	PR java/13733
+	* testsuite/libjava.compile/PR13733.java: New file.
+	* testsuite/libjava.compile/PR13733.xfail: New file.
+
 2004-01-22  Arnaud Vandyck  <arnaud.vandyck@ulg.ac.be>
             Michael Koch  <konqueror@gmx.de>
 
