--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Roger Sayle  <roger@eyesopen.com>
+
+	PR optimization/13821
+	* simplify-rtx.c (simplify_subreg): Use subreg_lowpart_offset to
+	correctly calculate the lowpart offset of the contracted subreg.
+
 2004-01-22  Ian Lance Taylor  <ian@wasabisystems.com>
 
 	* doc/invoke.texi (Optimize Options): Note that --param arguments
