--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-22  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR optimization/13724
+	* cse.c (fold_rtx) <SUBREG>:  Fold a SUBREG to zero if it
+	represents the zero bits produced by a ZERO_EXTEND operation.
+
 2004-01-22  Roger Sayle  <roger@eyesopen.com>
 
 	PR optimization/13821
