2004-01-22  James A. Mmorrison  <ja2morri@uwaterloo.ca>
	* config/pa/fptr.c: Fix old-style definition.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76396 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-22  James A. Mmorrison  <ja2morri@uwaterloo.ca>
+
+	* config/pa/fptr.c: Fix old-style definition.
+
 2004-01-22  Paolo Bonzini  <bonzini@gnu.org>
 
 	PR optimization/13724
