2004-01-23  Michael Koch  <konqueror@gmx.de>
	* java/lang/Class.java,
	java/lang/Object.java,
	java/lang/Thread.java: Merged copyright with classpath.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76409 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-23  Michael Koch  <konqueror@gmx.de>
 
+	* java/lang/Class.java,
+	java/lang/Object.java,
+	java/lang/Thread.java: Merged copyright with classpath.
+
+2004-01-23  Michael Koch  <konqueror@gmx.de>
+
 	* java/io/FileDescriptor.java: Merged copyright with classpath to
 	start merging this class.
 
