2004-01-23  Michael Koch  <konqueror@gmx.de>
	* java/io/FileDescriptor.java
	(in, out, err): Added javadoc.
	(static): Merged loading code.
	(fd, position): Moved around.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76411 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,12 @@
 2004-01-23  Michael Koch  <konqueror@gmx.de>
 
+	* java/io/FileDescriptor.java
+	(in, out, err): Added javadoc.
+	(static): Merged loading code.
+	(fd, position): Moved around.
+
+2004-01-23  Michael Koch  <konqueror@gmx.de>
+
 	* gnu/java/awt/doc-files/BitwiseXORComposite-1.png:
 	New file.
 
