2004-01-23  Michael Koch  <konqueror@gmx.de>
	* java/io/FileDescriptor.java
	(lock): New method.
	(tryLock): New method.
	(unlock): New method.
	* java/io/natFileDescriptorEcos.cc
	(lock): New method.
	(tryLock): New method.
	(unlock): New method.
	* java/io/natFileDescriptorPosix.cc
	(lock): New method.
	(tryLock): New method.
	(unlock): New method.
	* java/io/natFileDescriptorWin32.cc
	(lock): New method.
	(tryLock): New method.
	(unlock): New method.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76421 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,6 +1,25 @@
 2004-01-23  Michael Koch  <konqueror@gmx.de>
 
 	* java/io/FileDescriptor.java
+	(lock): New method.
+	(tryLock): New method.
+	(unlock): New method.
+	* java/io/natFileDescriptorEcos.cc
+	(lock): New method.
+	(tryLock): New method.
+	(unlock): New method.
+	* java/io/natFileDescriptorPosix.cc
+	(lock): New method.
+	(tryLock): New method.
+	(unlock): New method.
+	* java/io/natFileDescriptorWin32.cc
+	(lock): New method.
+	(tryLock): New method.
+	(unlock): New method.
+
+2004-01-23  Michael Koch  <konqueror@gmx.de>
+
+	* java/io/FileDescriptor.java
 	(sync): Moved around, added javadoc.
 	(valid): Likewise.
 	(open): Likewise.
